--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <FrameLayout android:id="@+id/fragment_container"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </FrameLayout>
+
     <include layout="@layout/bar_title"/>
 
 </FrameLayout>
