--- a/app/src/main/res/layout/bar_title.xml
+++ b/app/src/main/res/layout/bar_title.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/color2"
+        android:background="@color/view_menu_item"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="5dp"
@@ -43,7 +42,7 @@
         android:id="@+id/bar_title_layout_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/color2"
+        android:background="@color/view_menu_item"
         android:orientation="vertical"
         android:paddingStart="5dp"
         android:paddingEnd="2dp">
@@ -58,7 +57,7 @@
         <View
             android:layout_width="150dp"
             android:layout_height="2dp"
-            android:background="@color/color3" />
+            android:background="@color/main_menu_view" />
 
         <TextView
             android:id="@+id/bar_title_tv_add_order"
@@ -70,7 +69,7 @@
         <View
             android:layout_width="150dp"
             android:layout_height="2dp"
-            android:background="@color/color3" />
+            android:background="@color/main_menu_view" />
 
         <TextView
             android:id="@+id/bar_title_tv_view_cinema"
@@ -82,7 +81,7 @@
         <View
             android:layout_width="150dp"
             android:layout_height="2dp"
-            android:background="@color/color3" />
+            android:background="@color/main_menu_view" />
 
         <TextView
             android:id="@+id/bar_title_tv_add_cinema"
@@ -94,7 +93,7 @@
         <View
             android:layout_width="150dp"
             android:layout_height="2dp"
-            android:background="@color/color3" />
+            android:background="@color/main_menu_view" />
 
         <TextView
             android:id="@+id/bar_title_tv_exit"
