--- a/app/src/main/res/layout/add_fragment_orders.xml
+++ b/app/src/main/res/layout/add_fragment_orders.xml
@@ -1,11 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="50dp"/>
+    android:layout_height="match_parent"
+    android:layout_marginTop="55dp"
+    android:background="@color/background"
+    android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/add_order_movie_edt_name"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:background="@color/sort_catagory"
+        android:hint="请输入电影名称"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <RelativeLayout
+            android:id="@+id/add_order_layout_time"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/color2"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingLeft="5dp"
+                android:text="选择观影时间"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/add_order_tv_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="180dp"
+                android:layout_marginEnd="5dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:text="2017-04-05 12:20:55" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+
+    <Spinner android:id="@+id/add_order_sp_cinemas"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_margin="10dp">
+
+    </Spinner>
+
+    <EditText
+        android:id="@+id/add_order_movie_edt_price"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        android:inputType="numberDecimal"
+        android:background="@color/sort_catagory"
+        android:hint="请输入价格"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button android:id="@+id/add_order_movie_btn_QR_code"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_margin="1dp"
+            android:text="生产二维码"/>
+        <Button android:id="@+id/add_order_movie_btn_save"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_margin="1dp"
+            android:text="保存"/>
+        <Button android:id="@+id/add_order_movie_btn_cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_margin="1dp"
+            android:text="取消"/>
+    </LinearLayout>
+
+    <ImageView android:id="@+id/add_order_movie_imgQRCode"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/img5"
+        android:layout_gravity="center" />
 
 </LinearLayout>
