--- a/app/src/main/res/layout/cinemas_item.xml
+++ b/app/src/main/res/layout/cinemas_item.xml
@@ -34,7 +34,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="right"
-        android:src="@drawable/earth55"
+        android:src="@drawable/ic_launcher"
         android:layout_marginEnd="10dp" />
     </LinearLayout>
 
