--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-        <TextView android:id="@+id/order_item_movie"
-            android:layout_width="wrap_content"
+    android:descendantFocusability="blocksDescendants"
+    android:gravity="center_vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/cinemas_menu_item"
-            tools:text="邪不压正"
-            android:textSize="20sp"/>
-        <TextView android:id="@+id/order_item_location"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/order_item_tv_movie"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="上海市上海市浦东新区"
-            android:textSize="13sp"/>
-    </LinearLayout>
+            style="@style/ListTitle"
+            android:textSize="17sp"
+            android:layout_marginStart="10dp"
+            tools:text="流浪地球"/>
 
-    <Button android:id="@+id/order_item_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:visibility="gone"
-        android:background="@color/liji_material_red_700"
-        android:text="删除"
-        android:focusable="false"/>
+        <TextView
+            android:id="@+id/order_item_tv_places"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginStart="10dp"
+            tools:text="广西柳州市城中区万达影城"/>
+        </LinearLayout>
 
+        <Button
+            android:id="@+id/order_item_btn"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:background="@color/liji_material_red_700"
+            android:focusable="false"
+            android:gravity="center"
+            android:text="删除"
+            android:visibility="gone"
+            android:textColor="@color/white" />
 
 </LinearLayout>
