--- a/app/src/main/res/layout/bar_title.xml
+++ b/app/src/main/res/layout/bar_title.xml
@@ -1,107 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/view_menu_item"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
         android:paddingStart="5dp"
-        android:paddingEnd="5dp">
+        android:background="@color/color1"
+        android:paddingEnd="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/bar_title_img_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/menu" />
-
         <TextView
             android:id="@+id/bar_title_tv_title"
             android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_weight="1"
-            android:textSize="15sp"
-            tools:text="我的订单" />
+            android:textSize="18sp"
+            android:text="@string/bar_title_menu_order" />
 
         <SearchView
-            android:id="@+id/main_sv_search"
+            android:id="@+id/bar_title_search"
+            android:queryHint="1111"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:queryHint="请输入关键词搜索" />
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
-
-
     <LinearLayout
         android:id="@+id/bar_title_layout_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/view_menu_item"
-        android:orientation="vertical"
-        android:paddingStart="5dp"
-        android:paddingEnd="2dp">
-
+        android:padding="10dp"
+        android:layout_marginEnd="5dp"
+        android:visibility="gone"
+        android:background="@color/color1"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/bar_title_tv_view_order"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/bar_title_menu_orders"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:padding="5dp"
+            android:text="@string/bar_title_menu_order"/>
 
         <View
-            android:layout_width="150dp"
-            android:layout_height="2dp"
-            android:background="@color/main_menu_view" />
-
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/color3"/>
         <TextView
             android:id="@+id/bar_title_tv_add_order"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/bar_title_menu_add_orders"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:padding="5dp"
+            android:text="@string/bar_title_menu_add_order"/>
 
         <View
-            android:layout_width="150dp"
-            android:layout_height="2dp"
-            android:background="@color/main_menu_view" />
-
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/color3"/>
         <TextView
             android:id="@+id/bar_title_tv_view_cinema"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/bar_title_menu_cinema"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:padding="5dp"
+            android:text="@string/bar_title_menu_view_cinema"/>
 
         <View
-            android:layout_width="150dp"
-            android:layout_height="2dp"
-            android:background="@color/main_menu_view" />
-
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/color3"/>
         <TextView
             android:id="@+id/bar_title_tv_add_cinema"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/bar_title_menu_add_cinema"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:padding="5dp"
+            android:text="@string/bar_title_menu_add_cinema"/>
 
         <View
-            android:layout_width="150dp"
-            android:layout_height="2dp"
-            android:background="@color/main_menu_view" />
-
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/color3"/>
         <TextView
             android:id="@+id/bar_title_tv_exit"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/bar_title_menu_exit"
-            android:textSize="18sp" />
-
+            android:textSize="18sp"
+            android:padding="5dp"
+            android:text="@string/bar_title_menu_exit"/>
     </LinearLayout>
 
 </LinearLayout>
