--- a/app/src/main/res/layout/dialog_qrcode.xml
+++ b/app/src/main/res/layout/dialog_qrcode.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <ImageView android:id="@+id/dialog_qrcode_img"
+    <ImageView
+        android:id="@+id/dialog_qrcode"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_gravity="center"/>
+
 </FrameLayout>
