--- a/app/src/main/res/layout/fragment_cinema_orders.xml
+++ b/app/src/main/res/layout/fragment_cinema_orders.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
-<ListView android:id="@+id/fragment_cinema_orders_lv"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-</ListView>
-<TextView android:id="@+id/fragment_cinema_orders_none"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:text=" 暂无数据，请添加数据"/>
+
+    <ListView android:id="@+id/fragment_cinemas_order_lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <TextView android:id="@+id/fragment_cinemas_order_none"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/dialog_zoon" />
+
 </FrameLayout>
