--- a/app/src/main/res/layout/fragment_cinemas.xml
+++ b/app/src/main/res/layout/fragment_cinemas.xml
@@ -5,5 +5,6 @@
     android:layout_height="match_parent">
 
     <include layout="@layout/fragment_cinemas_content"/>
+    <include layout="@layout/cinema_item"/>
 
 </LinearLayout>
