--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -5,5 +5,6 @@
     android:layout_height="match_parent">
 
     <include layout="@layout/fragment_orders_content"/>
+    <include layout="@layout/order_item"/>
 
 </LinearLayout>
