--- a/app/src/main/res/layout/fragment_orders_content.xml
+++ b/app/src/main/res/layout/fragment_orders_content.xml
@@ -3,16 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView android:id="@+id/main_lv_order"
+    <ListView android:id="@+id/activity_orders_lv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent"/>
 
-    <TextView android:id="@+id/order_tv_none"
+    <TextView android:id="@+id/activity_order_tv_none"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="暂无数据，请添加数据"/>
-
+        android:text="@string/dialog_zoon" />
 
 </FrameLayout>
