--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="main_menu_view">#A9A9A9</color>
-    <color name="cinemas_menu_item">#2F4F4F</color>
-    <color name="view_menu_item">#F3F3F3</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorShadow">#0F000000</color>
+    <color name="colorCard">#FFFF</color>
+    <color name="colorBlack">#ff000000</color>
 </resources>
